# CarteZcash

./: .dockerignore  .env.local  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  asset-manifest.json  fly.fullnode.toml  fly.toml  fullnode.Dockerfile  index.html  justfile
.cargo/: config.toml
.github/workflows/: docker.yml  fly.yml  fly.yml.scratch  pages.yml  rust.yml
bridge-frontend/: .env.local  .gitignore  README.md  package-lock.json  package.json
bridge-frontend/public/: index.html
bridge-frontend/src/: App.css  App.tsx  GraphQL.tsx  Header.tsx  Network.tsx  Transfers.tsx  Vouchers.tsx  config.json  index.tsx  theme.ts  useRollups.tsx
bridge-frontend/src/components/: EtherInput.tsx  ZCashTaddressInput.tsx
cartezcash-lightwalletd/: Cargo.toml
cartezcash-lightwalletd/src/: proto.rs  service_impl.rs
cartezcash-lightwalletd/src/abi/: InputBox.json
cartezcash-lightwalletd/src/proto/: service.rs
cartezcash-proxy/: Cargo.toml
cartezcash-proxy/src/: conversions.rs  inspect_state_read.rs  lib.rs  main.rs  proto.rs  service_impl.rs
cartezcash-proxy/src/proto/: service.rs
docs/: DEPLOYMENT.md  chainspec.md
src/: ascii-logo.txt  initial_tx.txt  main.rs  request.rs
src/service/: mod.rs  request.rs  response.rs
static/css/: main.f720d5cb.css  main.f720d5cb.css.map
static/js/: 1066.e8319380.chunk.js  1066.e8319380.chunk.js.map  214.91389578.chunk.js  214.91389578.chunk.js.map  2202.6c8e5802.chunk.js  2202.6c8e5802.chunk.js.map  2260.01accbfd.chunk.js  2260.01accbfd.chunk.js.map  2342.4de538da.chunk.js  2342.4de538da.chunk.js.map  2361.566dd9be.chunk.js  2361.566dd9be.chunk.js.map  2415.70b322fd.chunk.js  2415.70b322fd.chunk.js.map  2475.58beb518.chunk.js  2475.58beb518.chunk.js.map  2835.21f6f77a.chunk.js  2835.21f6f77a.chunk.js.map  3619.a3606db5.chunk.js  3619.a3606db5.chunk.js.map  3931.3f1f394d.chunk.js  3931.3f1f394d.chunk.js.map  4163.f6eb93be.chunk.js  4163.f6eb93be.chunk.js.map  4172.cccfb939.chunk.js  4172.cccfb939.chunk.js.map  4183.f7d6bd1f.chunk.js  4183.f7d6bd1f.chunk.js.map  4329.908c662f.chunk.js  4329.908c662f.chunk.js.map  4419.660657fd.chunk.js  4419.660657fd.chunk.js.map  4783.cbd9f1b7.chunk.js  4783.cbd9f1b7.chunk.js.map  5504.0ec0a86e.chunk.js  5504.0ec0a86e.chunk.js.map  5705.5c59db40.chunk.js  5705.5c59db40.chunk.js.map  5716.88e4ac9a.chunk.js  5716.88e4ac9a.chunk.js.map  (+64 more)
tiny-cash/: Cargo.toml
tiny-cash/src/: lib.rs  service.rs  test.rs  write.rs
tower-cartesi/: Cargo.toml
tower-cartesi/examples/: echo.rs
tower-cartesi/graphql/: inputs_query.graphql  schema.graphql
tower-cartesi/src/: lib.rs  messages.rs  request.rs  response.rs
