[package]
name = "cartezcash"
version = "0.1.0"
edition = "2021"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "APACHE-2.0"

[dependencies]

json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["timeout", "util", "buffer"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
anyhow = "1.0.81"
hex = "0.4.3"
uint = "0.9.5"
ethereum-types = "0.14.1"
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-consensus = { workspace = true }

tiny-cash = { path = "tiny-cash" }
cartezcash-proxy = { path = "cartezcash-proxy" }
tonic = "0.11.0"

[workspace]
members = [ "cartezcash-proxy", "tiny-cash"]

[workspace.dependencies]

# patched zebra crates to support TinyCash network and expose things we need

# use these for docker builds
# zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
# zebra-state = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
# zebra-test = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
# zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }

# use these for speedy local development
zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
zebra-state = { path = "../zebra/zebra-state", default-features = false }
zebra-test = { path = "../zebra/zebra-test", default-features = false }
zebra-chain = { path = "../zebra/zebra-chain", default-features = false }




[patch.crates-io]
# Ring needed to be patched as while the current version supports riscv, the version used by Zebra doesn't.
ring = { git = "https://github.com/willemolding/ring",  branch = "willemolding/riscv-build-0.16.20" }
# rocksdb needs to link libatomic for riscv builds but doesn't do this. This patch adds it in. Can be merged upstream
rocksdb = { git = "https://github.com/willemolding/rust-rocksdb", branch = "willemolding/riscv-support" }
