[package]
name = "cartezcash-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "APACHE-2.0"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11", features = ["prost", "codegen"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

zebra-consensus = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs"] }
zebra-state = { workspace = true, default-features = false, features = ["proptest-impl"] }
zebra-test = { workspace = true, default-features = false }
zebra-chain = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
tower = "0.4.13"
hex = "0.4.3"
futures-util = "0.3.30"
