[package]
name = "tiny-cash"
version = "0.1.0"
edition = "2021"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "APACHE-2.0"

[dependencies]
tower = { version = "0.4.13", features = ["timeout", "util", "buffer"] }
zebra-consensus = { version = "1.0.0-beta.35", default-features = false, features = ["getblocktemplate-rpcs"] }
zebra-state = { version = "1.0.0-beta.35", default-features = false, features = ["proptest-impl"] }
zebra-test = { version = "1.0.0-beta.35", default-features = false }
zebra-chain = { version = "1.0.0-beta.35", default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
futures-util = "0.3.30"
