[package]
name = "tower-cartesi"
version = "0.1.0"
edition = "2021"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "APACHE-2.0"

[dependencies]
ethereum-types = "0.14.1"
http = "1.1.0"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tower-service = "0.3.2"
