[package]
name = "tower-cartesi"
version = "0.1.0"
edition = "2021"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "APACHE-2.0"

[dependencies]
ethereum-types = "0.14.1"
futures-util = "0.3.30"
graphql_client = "0.14.0"
hex = "0.4.3"
http = "1.1.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.32", features = ["time"] }
tower-service = "0.3.2"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
